# Water_Treatment_Models

./: .gitignore  Notizen_Fiona.docx  Readme.md  requirements.txt  setup.md
NOMAds/: pyproject.toml
NOMAds/NOMAds/: iast.py  utils.py
PSDM/: Example_Multi.xlsx  pyproject.toml
PSDM/PSDM/: PSDM.py
ShinyPy-GAC/: about.md  app.py
